--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,17 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <!-- <link
+      href="https://fonts.googleapis.com/css?family=Roboto:300,400,500"
+      rel="stylesheet"
+    /> -->
+
+    <link
+      href="https://fonts.googleapis.com/css?family=Germania+One|Roboto:300,400,500"
+      rel="stylesheet"
+    />
+
+    <title>NBA Click Game</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
